--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,14 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      # Define a MySQL service
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: root  # Correctly set the root password
           MYSQL_DATABASE: test
-          MYSQL_USER: root
-          MYSQL_PASSWORD: ""
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
