--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,41 +1,42 @@
-name: PHP CI
+name: Laravel CI
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: root  # Correctly set the root password
-          MYSQL_DATABASE: test
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     steps:
     - uses: actions/checkout@v2
 
-    - name: Copy .env
+    - name: Copy .env.example to .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
     - name: Install Dependencies
-      run: composer install -q --no-ansi --prefer-dist --no-interaction --no-scripts --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress --no-suggest
 
-    - name: Generate key
+    - name: Increase memory limit
+      run: echo "memory_limit=-1" >> $GITHUB_PATH
+
+    - name: Generate Application Key
       run: php artisan key:generate
 
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
 
-    - name: Install Laravel
-      run: composer install --no-interaction
+    - name: Install Passport
+      run: |
+        composer require laravel/passport
 
     - name: Run Migrations
       run: php artisan migrate --seed
 
-    - name: Execute PHPUnit tests
-      run: vendor/bin/phpunit --filter=UserEndpointTest
+    - name: Install Passport Keys
+      run: php artisan passport:install
+
+    - name: Run Tests
+      run: vendor/bin/phpunit
