--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,23 @@ jobs:
     - name: Copy .env.example to .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
+    - name: Setup Environment Variables
+      run: |
+        export DB_CONNECTION=mysql
+        export DB_HOST=127.0.0.1
+        export DB_PORT=3306
+        export DB_DATABASE=$(grep DB_DATABASE .env | cut -d '=' -f2)
+        export DB_USERNAME=$(grep DB_USERNAME .env | cut -d '=' -f2)
+        export DB_PASSWORD=$(grep DB_PASSWORD .env | cut -d '=' -f2)
+
+    - name: Start MySQL Service
+      run: docker run --name some-mysql -e MYSQL_ROOT_PASSWORD=${DB_PASSWORD} -d mysql:tag
+      env:
+        MYSQL_DATABASE: ${DB_DATABASE}
+        MYSQL_USER: ${DB_USERNAME}
+        MYSQL_PASSWORD: ${DB_PASSWORD}
+        MYSQL_RANDOM_ROOT_PASSWORD: '1'
+
     - name: Install Dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
@@ -28,7 +45,7 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
 
-    - name: Install Passport
+    - name: Install Passport, CORS, and ForceJsonResponse
       run: |
         composer require laravel/passport
 
