--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -26,7 +26,7 @@ jobs:
         export DB_PASSWORD=$(grep DB_PASSWORD .env | cut -d '=' -f2)
 
     - name: Start MySQL Service
-      run: docker run --name some-mysql -e MYSQL_ROOT_PASSWORD=${DB_PASSWORD} -d mysql:8.0
+      run: docker run --name test -e MYSQL_ROOT_PASSWORD=${DB_PASSWORD} -d mysql:8.0
       env:
         MYSQL_DATABASE: ${DB_DATABASE}
         MYSQL_USER: ${DB_USERNAME}
